# ssh-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yml  release.yml  test.yml
docs/: FASTMCP_BEST_PRACTICES.md  MCP_TRANSPORT_COMPARISON.md  MIGRATION_TO_V2.md  PROJECT_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  RELEASE_PROCESS.md  TOOLS_V2_FEATURES.md  TOOL_OUTPUT_FORMAT.md  api.md  troubleshooting.md
examples/: README.md
examples/basic/: multiple_connections.sh  single_connection.sh
examples/cursor/: README.md  WORKING_CONFIG.md  basic-config.json  setup-cursor-mcp.sh  your-server-config.json
examples/deployment/: Dockerfile  docker-compose.yml  systemd_service.sh
examples/mcp_clients/: python_client.py
examples/optimized_tools/: README.md  server_optimized.py  ssh_tools_optimized.py
python_src/python_ssh_mcp/: __init__.py  __main__.py  cli.py  main.py  models.py  server.py  ssh_manager.py
python_src/python_ssh_mcp/tools/: __init__.py  download.py  execute_command.py  list_servers.py  server.py  upload.py
python_src/python_ssh_mcp/tools/v2/: __init__.py  server.py  ssh_tools.py
src/ssh_mcp/: __init__.py  __main__.py  cli.py  main.py  ssh_manager.py
src/ssh_mcp/tools/: __init__.py  ssh_tools.py
src/ssh_mcp/utils/: __init__.py  error_handling.py  logger.py
tests/: README.md  __init__.py  comparison_test_summary.py  conftest.py  performance_benchmark.py  run_tests.py  test_cli.py  test_integration.py  test_mcp_integration.py  test_mcp_tools.py  test_ssh_manager.py  test_tools_v2_comparison.py
